# cosmic-radio-applet

./: .gitignore  .yamllint  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  justfile
.github/: CI_CD.md  DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  pre-commit.sample
.github/workflows/: ci.yml
i18n/en/: cosmic_ext_applet_radio.ftl  cosmic_radio_applet.ftl
nix/: hm-module.nix  nixos-module.nix
resources/: app.desktop  app.metainfo.xml
src/: api.rs  app.rs  audio.rs  config.rs  error.rs  i18n.rs  lib.rs  main.rs  mpris.rs
tests/: unit_tests.rs
