[package]
name = "cosmic-radio-applet"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }
rodio = "0.19"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]
