[package]
name = "cosmic-ext-applet-radio"
version = "0.2.0"
edition = "2021"

[lib]
name = "cosmic_ext_applet_radio_lib"
path = "src/lib.rs"
test = true

[dependencies]
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tracing = "0.1"
thiserror = "2.0"
mpris-server = "0.9"
futures = "0.3"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]
